--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -60,6 +60,12 @@ endif
 
 # browser_bug321000.js is disabled because newline handling is shaky (bug 592528)
 
+MOCHITEST_REAL_BROWSER_FILES = \
+                 head.js \
+                 browser_simple.js \
+                 dummy_page.html \
+                 $(NULL)
+
 MOCHITEST_BROWSER_FILES = \
                  head.js \
                  alltabslistener.html \
