--- a/browser/components/search/test/Makefile.in
+++ b/browser/components/search/test/Makefile.in
@@ -28,13 +28,13 @@ MOCHITEST_BROWSER_FILES = \
   test.html \
   $(NULL)
 
-ifdef ENABLE_TESTS
-pp_mochitest_browser_files := \
-  browser_google.js \
-  $(NULL)
-pp_mochitest_browser_files_PATH := $(DEPTH)/_tests/testing/mochitest/browser/$(relativesrcdir)
-pp_mochitest_browser_files_FLAGS := -DMOZ_DISTRIBUTION_ID=$(MOZ_DISTRIBUTION_ID)
-PP_TARGETS += pp_mochitest_browser_files
-endif # ENABLE_TESTS
+#ifdef ENABLE_TESTS
+#pp_mochitest_browser_files := \
+#  browser_google.js \
+#  $(NULL)
+#pp_mochitest_browser_files_PATH := $(DEPTH)/_tests/testing/mochitest/browser/$(relativesrcdir)
+#pp_mochitest_browser_files_FLAGS := -DMOZ_DISTRIBUTION_ID=$(MOZ_DISTRIBUTION_ID)
+#PP_TARGETS += pp_mochitest_browser_files
+#endif # ENABLE_TESTS
 
 include $(topsrcdir)/config/rules.mk
